--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <h2>📎 Дипломы и сертификаты</h2>
   <img class="cert" src="https://github.com/user-attachments/assets/3d56c482-63f4-4731-9f93-fee118d1cf10" alt="Сертификат 1" />
   <img class="cert" src="https://github.com/user-attachments/assets/bf1ac23e-a168-4292-977e-4bbd499c4426" alt="Сертификат 2" />
-
+  <h3>Скоро тут появятся новые сертификаты/дипломы :)</h3>
   <hr />
 
   <h2>📫 Контакты</h2>
