--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
   <ul>
     <li>Figma, Canva, Photoshop</li>
     <li>CapCut, Sony Vegas Pro</li>
-    <li>Оформление блогов, обложки</li>
+    <li>Оформление блогов, обложки, лого</li>
   </ul>
 
   <h3>🔧 Игровые движки</h3>
   <ul>
-    <li>Unreal Engine 4/5</li>
+    <li>Unreal Engine 4/5 (базово)</li>
     <li>RenPy, Twine</li>
   </ul>
 
   <h3>🤖 Нейросети</h3>
   <ul>
-    <li>ChatGPT, Midjourney, DALL·E, Suno, Sora</li>
-    <li>Промтинг, генерация ассетов, автоматизация</li>
+    <li>ChatGPT, Midjourney, DALL·E, Suno</li>
+    <li>Промтинг, генерация ассетов, ассистирование в QA</li>
   </ul>
 
   <hr />
