--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     }
   </style>
 </head>
+
+
 <body>
 
   <img class="avatar" src="https://avatars.githubusercontent.com/u/51741188?v=4" alt="Avatar" />
@@ -185,6 +187,93 @@
     <li>📢 Работа с фидбэком</li>
     <li>⏱ Умение укладываться в жёсткие дедлайны</li>
   </ul>
+
+
+    <hr />
+
+  <h2>🧠 Навыки наглядно</h2>
+  <style>
+    .skill-block {
+      margin-bottom: 1.2rem;
+    }
+
+    .skill-label {
+      font-weight: bold;
+      margin-bottom: 0.3rem;
+    }
+
+    .progress-bar {
+      display: flex;
+      gap: 0.3rem;
+    }
+
+    .progress-cell {
+      width: 20px;
+      height: 20px;
+      border-radius: 4px;
+      background-color: #eee;
+    }
+
+    .progress-cell.filled {
+      background-color: #4caf50;
+    }
+  </style>
+
+  <div class="skill-block">
+    <div class="skill-label">📄 Работа с документацией</div>
+    <div class="progress-bar">
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+    </div>
+  </div>
+
+  <div class="skill-block">
+    <div class="skill-label">✍️ Сценарии и тексты</div>
+    <div class="progress-bar">
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+    </div>
+  </div>
+
+    <div class="skill-block">
+    <div class="skill-label">🧪 Тестирование</div>
+    <div class="progress-bar">
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell"></div>
+    </div>
+  </div>
+
+  <div class="skill-block">
+    <div class="skill-label">🎮 Геймдизайн</div>
+    <div class="progress-bar">
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell"></div>
+    </div>
+  </div>
+
+  <div class="skill-block">
+    <div class="skill-label">💻 Код / программирование</div>
+    <div class="progress-bar">
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell filled"></div>
+      <div class="progress-cell"></div>
+      <div class="progress-cell"></div>
+    </div>
+  </div>
+
 
   <hr />
 
