--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <img class="avatar" src="https://avatars.githubusercontent.com/u/51741188?v=4" alt="Avatar" />
 
   <h1>👋 Привет, я Никита</h1>
-  <p class="center">🎯 Креативный специалист · 🧪 QA-инженер · 🎮 Геймдизайнер · ✍️ Писатель</p>
+  <p class="center">✍️ Писатель · 🧪 QA-инженер · 🎮 Геймдизайнер · 🎯 Креативный специалист</p>
 
   <hr />
 
