--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
       padding-left: 1.2rem;
     }
 
-    img.cert {
-      width: 100%;
-      max-width: 800px;
-      margin-bottom: 1.5rem;
-      border-radius: 8px;
-    }
+img.cert {
+  display: block;
+  width: 100%;
+  max-width: 800px;
+  margin: 1.5rem auto;
+  border-radius: 8px;
+}
+
 
     @media (max-width: 600px) {
       body {
