--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>👋 Никита Жваев</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --orange-light: #fff7f0;
+      --orange: #fca652;
+      --text-color: #111;
+      --card-radius: 12px;
+    }
+
     body {
       margin: 0;
       padding: 2rem;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: #fdfdfd;
-      color: #111;
+      font-family: 'Montserrat', sans-serif;
+      background-color: var(--orange-light);
+      color: var(--text-color);
       line-height: 1.7;
       max-width: 900px;
       margin-left: auto;
@@ -22,7 +30,7 @@
       height: 140px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid #ccc;
+      border: 3px solid #fca652;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       display: block;
       margin: 0 auto 1.5rem;
@@ -43,7 +51,7 @@
     }
 
     a {
-      color: #0066cc;
+      color: #d55b00;
       text-decoration: none;
     }
 
@@ -54,153 +62,41 @@
     hr {
       margin: 2rem 0;
       border: none;
-      border-top: 1px solid #ddd;
+      border-top: 1px solid #f5c6a5;
     }
 
     ul {
-      padding-left: 1.2rem;
+      padding-left: 1.5rem;
     }
 
-img.cert {
-  display: block;
-  width: 100%;
-  max-width: 800px;
-  margin: 1.5rem auto;
-  border-radius: 8px;
-}
-
-
-    @media (max-width: 600px) {
-      body {
-        padding: 1rem;
-      }
-
-      img.avatar {
-        width: 100px;
-        height: 100px;
-      }
-
-      h1 {
-        font-size: 1.6rem;
-      }
+    img.cert {
+      display: block;
+      width: 100%;
+      max-width: 800px;
+      margin: 1.5rem auto;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     }
-  </style>
-</head>
 
+    .section {
+      background-color: #fff;
+      border-radius: var(--card-radius);
+      padding: 1.5rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 12px rgba(252, 166, 82, 0.1);
+    }
 
-<body>
+    .section h2 {
+      color: #d55b00;
+      margin-top: 0;
+    }
 
-  <img class="avatar" src="https://avatars.githubusercontent.com/u/51741188?v=4" alt="Avatar" />
-
-  <h1>👋 Привет, я Никита</h1>
-  <p class="center">✍️ Писатель · 🧪 QA-инженер · 🎮 Геймдизайнер · 🎯 Креативный специалист</p>
-
-  <hr />
-
-  <h2>🧭 О себе</h2>
-  <ul>
-    <li>🧩 Изучаю ручное тестирование как QA-специалист</li>
-    <li>🎮 Выпускник курса "Геймдизайн" от GeekBrains</li>
-    <li>⚖️ Выпускник РГУП, г. Москва — юриспруденция, специалист для судебной системы</li>
-    <li>✍️ Автор книг, рассказов и статей на <a href="https://dtf.ru/id269504">DTF</a> и <a href="https://dzen.ru/toss">Дзен</a></li>
-    <li>🎸 Играю на электрогитаре и сочиняю <a href="https://vk.com/music/playlist/651786960_11_48e611ceeae2033fe8">музыку</a></li>
-    <li>🌍 Мечтаю переехать</li>
-  </ul>
-
-  <hr />
-
-  <h2>💼 Профессиональный опыт</h2>
-  <h3>🎮 Игровая индустрия</h3>
-  <ul>
-    <li><b>🧵 Founder & Game Lead — <a href="https://logman12.itch.io/">TOSS STUDIO</a></b><br>
-      Зарелизил <a href="https://logman12.itch.io/the-leather-city">The Leather City</a> на Google Play, VK.PLAY и itch.io — концепт, левел-дизайн, нарратив, код, маркетинг, паблишинг</li>
-    <li><b>🎮 Lead Game Designer & Narrative Designer — <a href="https://vk.com/department34">Callisto Games</a> / ex-Another Way Games</b><br>
-      GDD, нарратив, взаимодействие с командой</li>
-  </ul>
-
-  <h3>🛠 GitHub-проекты</h3>
-  <ul>
-    <li><a href="https://github.com/dantemorrigan/48-91KINO_bot">48-91KINO_bot</a> — телеграм-бот для стриминга авторского кино</li>
-    <li><a href="https://github.com/dantemorrigan/Cotes">Cotes</a> — минималистичное приложение для заметок</li>
-    <li><a href="https://github.com/dantemorrigan/lovepulse">LovePulse</a> — приложение для отслеживания романтических связей</li>
-  </ul>
-
-  <h3>🖋 Медиа и креатив</h3>
-  <ul>
-    <li><b>📡 Editor-in-Chief — <a href="https://t.me/tommorow4891">tommorow4891</a></b> — телеграм-канал об искусстве</li>
-    <li>🎨 Visual Designer / Freelance — брендинг, лого, презентации</li>
-  </ul>
-
-  <hr />
-
-  <h2>🎓 Образование и курсы</h2>
-  <ul>
-    <li><b>📘 РГУП, бакалавриат (2021–2025)</b> — юриспруденция, судебная система</li>
-    <li><b>🎓 GeekBrains, курс "Геймдизайн" (2021–2023)</b> — UE4/5, геймджемы</li>
-    <li><b>🧪 QA.Studio, курс "Инженер по тестированию" (2025)</b> — REST, SOAP, Postman, DevTools</li>
-  </ul>
-
-  <hr />
-
-  <h2>⚙️ Технические навыки</h2>
-
-  <h3>🧪 QA и инструменты</h3>
-  <ul>
-    <li>HTTP / REST / JSON / XML / SOAP / WebSocket / GraphQL</li>
-    <li>Postman, DevTools, Swagger, Redoc</li>
-    <li>Чек-листы, тест-кейсы, баг-репорты</li>
-    <li>Git, VS Code, HTML, CSS, Python (базово)</li>
-    <li>Телеграм-боты с AI</li>
-  </ul>
-
-  <h3>🎮 Геймдизайн</h3>
-  <ul>
-    <li>GDD, нарратив, квесты, механики, монетизация</li>
-    <li>Экономика, прогрессии, жанровый анализ</li>
-    <li>Презентации, структура проектов</li>
-  </ul>
-
-  <h3>🎨 Дизайн и мультимедиа</h3>
-  <ul>
-    <li>Figma, Canva, Photoshop</li>
-    <li>CapCut, Sony Vegas Pro</li>
-    <li>Оформление блогов, обложки, лого</li>
-  </ul>
-
-  <h3>🔧 Игровые движки</h3>
-  <ul>
-    <li>Unreal Engine 4/5 (базово)</li>
-    <li>RenPy, Twine</li>
-  </ul>
-
-  <h3>🤖 Нейросети</h3>
-  <ul>
-    <li>ChatGPT, Midjourney, DALL·E, Suno</li>
-    <li>Промтинг, генерация ассетов, ассистирование в QA</li>
-  </ul>
-
-  <hr />
-
-  <h2>🤝 Soft Skills</h2>
-  <ul>
-    <li>📌 Руководство проектами и командами</li>
-    <li>💬 Ведение переговоров и деловая коммуникация</li>
-    <li>🔥 Креативное мышление и генерация идей</li>
-    <li>📢 Работа с фидбэком</li>
-    <li>⏱ Умение укладываться в жёсткие дедлайны</li>
-  </ul>
-
-
-    <hr />
-
-  <h2>🧠 Навыки наглядно</h2>
-  <style>
     .skill-block {
       margin-bottom: 1.2rem;
     }
 
     .skill-label {
-      font-weight: bold;
+      font-weight: 600;
       margin-bottom: 0.3rem;
     }
 
@@ -217,83 +113,187 @@ img.cert {
     }
 
     .progress-cell.filled {
-      background-color: #4caf50;
+      background-color: #fca652;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+
+      img.avatar {
+        width: 100px;
+        height: 100px;
+      }
+
+      h1 {
+        font-size: 1.6rem;
+      }
+
+      .section {
+        padding: 1rem;
+      }
     }
   </style>
+</head>
 
-  <div class="skill-block">
-    <div class="skill-label">📄 Работа с документацией</div>
-    <div class="progress-bar">
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-    </div>
+<body>
+
+  <img class="avatar" src="https://avatars.githubusercontent.com/u/51741188?v=4" alt="Avatar" />
+
+  <h1>👋 Привет, я Никита</h1>
+  <p class="center">✍️ Писатель · 🧪 QA-инженер · 🎮 Геймдизайнер · 🎯 Креативный специалист</p>
+
+  <div class="section">
+    <h2>🧭 О себе</h2>
+    <ul>
+      <li>🧩 Изучаю ручное тестирование как QA-специалист</li>
+      <li>🎮 Выпускник курса "Геймдизайн" от GeekBrains</li>
+      <li>⚖️ Выпускник РГУП, г. Москва — юриспруденция, специалист для судебной системы</li>
+      <li>✍️ Автор книг, рассказов и статей на <a href="https://dtf.ru/id269504">DTF</a> и <a href="https://dzen.ru/toss">Дзен</a></li>
+      <li>🎸 Играю на электрогитаре и сочиняю <a href="https://vk.com/music/playlist/651786960_11_48e611ceeae2033fe8">музыку</a></li>
+      <li>🌍 Мечтаю переехать</li>
+    </ul>
   </div>
 
-  <div class="skill-block">
-    <div class="skill-label">✍️ Сценарии и тексты</div>
-    <div class="progress-bar">
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-    </div>
+  <div class="section">
+    <h2>💼 Профессиональный опыт</h2>
+
+    <h3>🎮 Игровая индустрия</h3>
+    <ul>
+      <li><b>🧵 Founder & Game Lead — <a href="https://logman12.itch.io/">TOSS STUDIO</a></b><br>
+        Зарелизил <a href="https://logman12.itch.io/the-leather-city">The Leather City</a> — концепт, левел-дизайн, нарратив, код, маркетинг, паблишинг</li>
+      <li><b>🎮 Lead Game Designer — <a href="https://vk.com/department34">Callisto Games</a></b><br>
+        GDD, нарратив, взаимодействие с командой</li>
+    </ul>
+
+    <h3>🛠 GitHub-проекты</h3>
+    <ul>
+      <li><a href="https://github.com/dantemorrigan/48-91KINO_bot">48-91KINO_bot</a> — телеграм-бот для стриминга авторского кино</li>
+      <li><a href="https://github.com/dantemorrigan/Cotes">Cotes</a> — минималистичное приложение для заметок</li>
+      <li><a href="https://github.com/dantemorrigan/lovepulse">LovePulse</a> — приложение для отслеживания романтических связей</li>
+    </ul>
+
+    <h3>🖋 Медиа и креатив</h3>
+    <ul>
+      <li><b>📡 Editor-in-Chief — <a href="https://t.me/tommorow4891">tommorow4891</a></b></li>
+      <li>🎨 Visual Designer / Freelance — брендинг, лого, презентации</li>
+    </ul>
   </div>
+
+  <div class="section">
+    <h2>🎓 Образование и курсы</h2>
+    <ul>
+      <li><b>📘 РГУП, бакалавриат (2021–2025)</b> — юриспруденция, судебная система</li>
+      <li><b>🎓 GeekBrains, курс "Геймдизайн" (2021–2023)</b> — UE4/5, геймджемы</li>
+      <li><b>🧪 QA.Studio, курс "Инженер по тестированию" (2025)</b> — REST, SOAP, Postman, DevTools</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>⚙️ Технические навыки</h2>
+
+    <h3>🧪 QA и инструменты</h3>
+    <ul>
+      <li>HTTP / REST / JSON / XML / SOAP / WebSocket / GraphQL</li>
+      <li>Postman, DevTools, Swagger, Redoc</li>
+      <li>Чек-листы, тест-кейсы, баг-репорты</li>
+      <li>Git, VS Code, HTML, CSS, Python (базово)</li>
+      <li>Телеграм-боты с AI</li>
+    </ul>
+
+    <h3>🎮 Геймдизайн</h3>
+    <ul>
+      <li>GDD, нарратив, квесты, механики, монетизация</li>
+      <li>Экономика, прогрессии, жанровый анализ</li>
+      <li>Презентации, структура проектов</li>
+    </ul>
+
+    <h3>🎨 Дизайн и мультимедиа</h3>
+    <ul>
+      <li>Figma, Canva, Photoshop</li>
+      <li>CapCut, Sony Vegas Pro</li>
+      <li>Оформление блогов, обложки, лого</li>
+    </ul>
+
+    <h3>🔧 Игровые движки</h3>
+    <ul>
+      <li>Unreal Engine 4/5 (базово)</li>
+      <li>RenPy, Twine</li>
+    </ul>
+
+    <h3>🤖 Нейросети</h3>
+    <ul>
+      <li>ChatGPT, Midjourney, DALL·E, Suno</li>
+      <li>Промтинг, генерация ассетов, ассистирование в QA</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🤝 Soft Skills</h2>
+    <ul>
+      <li>📌 Руководство проектами и командами</li>
+      <li>💬 Ведение переговоров и деловая коммуникация</li>
+      <li>🔥 Креативное мышление и генерация идей</li>
+      <li>📢 Работа с фидбэком</li>
+      <li>⏱ Умение укладываться в жёсткие дедлайны</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>🧠 Навыки наглядно</h2>
 
     <div class="skill-block">
-    <div class="skill-label">🧪 Тестирование</div>
-    <div class="progress-bar">
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell"></div>
+      <div class="skill-label">📄 Работа с документацией</div>
+      <div class="progress-bar">
+        <div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div>
+      </div>
+    </div>
+
+    <div class="skill-block">
+      <div class="skill-label">✍️ Сценарии и тексты</div>
+      <div class="progress-bar">
+        <div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div>
+      </div>
+    </div>
+
+    <div class="skill-block">
+      <div class="skill-label">🧪 Тестирование</div>
+      <div class="progress-bar">
+        <div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell"></div>
+      </div>
+    </div>
+
+    <div class="skill-block">
+      <div class="skill-label">🎮 Геймдизайн</div>
+      <div class="progress-bar">
+        <div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell"></div>
+      </div>
+    </div>
+
+    <div class="skill-block">
+      <div class="skill-label">💻 Код / программирование</div>
+      <div class="progress-bar">
+        <div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell filled"></div><div class="progress-cell"></div><div class="progress-cell"></div>
+      </div>
     </div>
   </div>
 
-  <div class="skill-block">
-    <div class="skill-label">🎮 Геймдизайн</div>
-    <div class="progress-bar">
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell"></div>
-    </div>
+  <div class="section">
+    <h2>📎 Дипломы и сертификаты</h2>
+    <img class="cert" src="./images/bakalavr.png" alt="Бакалавр" />
+    <img class="cert" src="./images/diplom.png" alt="Диплом QA" />
+    <img class="cert" src="./images/design.png" alt="Диплом по дизайну" />
+    <h3 style="text-align:center;">Скоро тут появятся новые сертификаты/дипломы :)</h3>
   </div>
 
-  <div class="skill-block">
-    <div class="skill-label">💻 Код / программирование</div>
-    <div class="progress-bar">
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell filled"></div>
-      <div class="progress-cell"></div>
-      <div class="progress-cell"></div>
-    </div>
+  <div class="section">
+    <h2>📫 Контакты</h2>
+    <ul>
+      <li>💬 Telegram: <a href="https://t.me/dante_morr1209">@dante_morr</a></li>
+      <li>📧 Email: <a href="mailto:nikitazhvaev@gmail.com">nikitazhvaev@gmail.com</a></li>
+    </ul>
   </div>
-
-
-  <hr />
-
-  <h2>📎 Дипломы и сертификаты</h2>
-<img class="cert" src="./images/bakalavr.png" alt="Бакалавр" />
-<img class="cert" src="./images/diplom.png" alt="Диплом QA" />
-<img class="cert" src="./images/design.png" alt="Диплом по дизайну" />
-
-  <h3>Скоро тут появятся новые сертификаты/дипломы :)</h3>
-  
-  <hr />
-
-  <h2>📫 Контакты</h2>
-  <ul>
-    <li>💬 Telegram: <a href="https://t.me/dante_morr1209">@dante_morr</a></li>
-    <li>📧 Email: <a href="mailto:nikitazhvaev@gmail.com">nikitazhvaev@gmail.com</a></li>
-  </ul>
-
 
 </body>
 </html>
