--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
     <ul>
       <li>HTTP / REST / JSON / XML / SOAP / WebSocket / GraphQL</li>
       <li>Postman, DevTools, Swagger, Redoc</li>
+      <li>Sentry, Kibana, Grafana</li>
       <li>Чек-листы, тест-кейсы, баг-репорты</li>
       <li>Git, VS Code, HTML, CSS, Python (базово)</li>
       <li>Телеграм-боты с AI</li>
