--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
     <ul>
       <li>HTTP / REST / JSON / XML / SOAP / WebSocket / GraphQL</li>
       <li>Postman, DevTools, Swagger, Redoc</li>
+      <li>Опыт работы с PostgreSQL, MongoDB</li>
+      <li>Делаю SQL-запросы средней сложности (Select, Join, Group by)</li>
+      <li>Metabase6 Compass, Dbeaver</li>
       <li>Sentry, Kibana, Grafana</li>
       <li>Чек-листы, тест-кейсы, баг-репорты</li>
       <li>Git, VS Code, HTML, CSS, Python (базово)</li>
