--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="section">
     <h2>🧭 О себе</h2>
     <ul>
-      <li>🧩 Изучаю ручное тестирование как QA-специалист</li>
+      <li>🧩 Выпускник школы QA Studio (Junior)</li>
       <li>🎮 Выпускник курса "Геймдизайн" от GeekBrains</li>
       <li>⚖️ Выпускник РГУП, г. Москва — юриспруденция, специалист для судебной системы</li>
       <li>✍️ Автор книг, рассказов и статей на <a href="https://dtf.ru/id269504">DTF</a> и <a href="https://dzen.ru/toss">Дзен</a></li>
@@ -202,8 +202,9 @@
       <li>Metabase6 Compass, Dbeaver</li>
       <li>Sentry, Kibana, Grafana</li>
       <li>Чек-листы, тест-кейсы, баг-репорты</li>
+      <li>Charles</li>
       <li>Git, VS Code, HTML, CSS, Python (базово)</li>
-      <li>Телеграм-боты с AI</li>
+      <li>Телеграм-боты с ассистированием от AI</li>
     </ul>
 
     <h3>🎮 Геймдизайн</h3>
