--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <li>Postman, DevTools, Swagger, Redoc</li>
       <li>Опыт работы с PostgreSQL, MongoDB</li>
       <li>Делаю SQL-запросы средней сложности (Select, Join, Group by)</li>
-      <li>Metabase6 Compass, Dbeaver</li>
+      <li>Metabase, Compass, Dbeaver</li>
       <li>Sentry, Kibana, Grafana</li>
       <li>Чек-листы, тест-кейсы, баг-репорты</li>
       <li>Charles</li>
