--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     <h2>🎓 Образование и курсы</h2>
     <ul>
       <li><b>📘 РГУП, бакалавриат (2021–2025)</b> — юриспруденция, судебная система</li>
-      <li><b>🎓 GeekBrains, курс "Геймдизайн" (2021–2023)</b> — UE4/5, геймджемы</li>
-      <li><b>🧪 QA.Studio, курс "Инженер по тестированию" (2025)</b> — REST, SOAP, Postman, DevTools</li>
+      <li><b>🎓 GeekBrains, курс "Геймдизайн" (2021–2023)</b> — UE4/5, сценаристика, экономика, геймджемы</li>
+      <li><b>🧪 QA Studio, курс "Инженер по тестированию" (2025)</b> — Изучена база тестирования. Получен опыт на реальном проекте</li>
     </ul>
   </div>
 
