--- a/index.html
+++ b/index.html
@@ -287,9 +287,10 @@
   <div class="section">
     <h2>📎 Дипломы и сертификаты</h2>
     <img class="cert" src="./images/bakalavr.png" alt="Бакалавр" />
-    <img class="cert" src="./images/diplom.png" alt="Диплом QA" />
-    <img class="cert" src="./images/design.png" alt="Диплом по дизайну" />
-    <h3 style="text-align:center;">Скоро тут появятся новые сертификаты/дипломы :)</h3>
+    <img class="cert" src="./images/diplom.png" alt="Диплом GB" />
+    <img class="cert" src="./images/design.png" alt="Диплом по GB2" />
+    <img class="cert" src="./images/ru_cert.png" alt="Диплом по QA_ru" />
+    <img class="cert" src="./images/eng_cert.png" alt="Диплом по QA_eng" />
   </div>
 
   <div class="section">
