--- a/index.html
+++ b/index.html
@@ -286,11 +286,12 @@
 
   <div class="section">
     <h2>📎 Дипломы и сертификаты</h2>
-    <img class="cert" src="./images/bakalavr.png" alt="Бакалавр" />
-    <img class="cert" src="./images/ru_cert.png" alt="Диплом по QA_ru" />
-    <img class="cert" src="./images/eng_cert.png" alt="Диплом по QA_eng" />
-    <img class="cert" src="./images/diplom.png" alt="Диплом GB" />
-    <img class="cert" src="./images/design.png" alt="Диплом по GB2" />
+<img class="cert" src="./images/bakalavr.png" alt="Диплом бакалавра" />
+<img class="cert" src="./images/ru_cert.png" alt="Сертификат QA (на русском)" />
+<img class="cert" src="./images/eng_cert.png" alt="Сертификат QA (на английском)" />
+<img class="cert" src="./images/diplom.png" alt="Диплом GeekBrains" />
+<img class="cert" src="./images/design.png" alt="Сертификат GeekBrains по дизайну" />
+
   </div>
 
   <div class="section">
