--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 <img class="cert" src="./images/bakalavr.png" alt="Диплом бакалавра" />
 <img class="cert" src="./images/ru_cert.png" alt="Сертификат QA (на русском)" />
 <img class="cert" src="./images/eng_cert.png" alt="Сертификат QA (на английском)" />
-<img class="cert" src="./images/diplom.png" alt="Диплом GeekBrains" />
+<img class="cert" src="./images/diplom_gb.png" alt="Диплом GeekBrains о профессиональной переподготовке" />
+<img class="cert" src="./images/diplom.png" alt="Сертификат GeekBrains" />
 <img class="cert" src="./images/design.png" alt="Сертификат GeekBrains по дизайну" />
 
   </div>
